--- a/settings.gradle
+++ b/settings.gradle
@@ -8,5 +8,8 @@ include 'hw05-proxy'
 include 'hw06-oop'
 include 'hw07-patterns'
 include 'hw08-serialization'
-
+include 'hw09-jdbc'
+include 'hw10-jpql'
+include 'hw10-jpql'
+include 'hw10-jpql'
 
